--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
 	<main>
 		<div id="box">
-			<h1>codeX</h1><br>
+			<h1>codeXX</h1><br>
 			<h3>Welcome back!</h3><br>
 			<p>New to codeX? 
 				<a href="#"> Sign Up</a>
